# mac_disk

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  todo.md  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.claude/: settings.local.json
.trae/documents/: plan_20260209_133704.md  修复删除按钮溢出与表格自适应对齐.md
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  scanner.rs
src/components/: ConfirmDialog.tsx  FileList.tsx  Scanner.tsx
